HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncDiagnosticsSupplement/Source/Main.uv
//! Rejected async specimen for the async diagnostics supplement table.

public procedure asyncDiagnosticsSupplementReference(context: Context) -> Async<(), (), i32, !> {
    let text: unique string@Managed = context.fs~>read_file("missing.txt")?
    return 0
}
